--- a/index.html
+++ b/index.html
@@ -11,7 +11,23 @@
 	
 	<body>
 		
-			<!-- Content goes heer -->		
+		<nav>
+			<div>
+				<img src="http://placehold.it/50x50" alt="Kiwibank logo">
+				<img src="http://placehold.it/25x25" alt="Hamburger icon" id="hamburger">
+				<ul>
+					<li><a href="#">Personal</a></li>
+					<li><a href="#">Business</a></li>
+					<li><a href="#">Join <span>Kiwibank</span></a></li>
+					<li><a href="#">About</a></li>
+					<li><a href="#">Contact <span>Us</span></a></li>
+				</ul>
+				<ul>
+					<li><a href="#">Q</a></li>
+					<li><a href="#">Internet Banking</a></li>
+				</ul>
+			</div>		
+		</nav>		
 
 
 
