Add hero section

--- a/index.html
+++ b/index.html
@@ -39,6 +39,20 @@
 				<li><strong>7am-9pm</strong> Monday to Friday</li>
 				<li><strong>8am-6pm</strong> Weekends and public </li>
 			</ul>
+		</section>
+
+		<section id="hero">
+			
+			<p>Wayne Bishop <br> 2016 WebDevelopment</p>
+
+			<div>
+				<h1>Honoring the best of us</h1>
+				<p>We're proud to anounce the winner of the 2016 awards for things</p>
+				<a href="#">See their inspiring stories</a>	
+			</div>
+
+			<button id="prev">&lt;</button>
+			<button id="next">&gt;</button>
 
 			
 		</section>
