--- a/index.html
+++ b/index.html
@@ -53,9 +53,30 @@
 
 			<button id="prev">&lt;</button>
 			<button id="next">&gt;</button>
-
 			
 		</section>
+
+
+		<section id="products">
+			<h1>New 'round here?</h1>
+			<p>Our name says it all. We're a bank made for New Zealanders, by New Zealanders. Helping Kiwis achieve financial independence is what we do.</p>
+
+			<a href="#">Everyday banking</a>
+			<a href="#">Credit cards</a>
+			<a href="#">Home loans</a>
+			<a href="#">KiwiSaver</a>
+			<a href="#">Rates &amp; fees</a>
+			<a href="#">Calculators</a>
+
+			<div class="percentage">
+				<span class="limited">Limited Time</span>
+				<span>Home loan</span>
+			</div>
+
+			<a href="#">See all interest rates &gt;</a>
+			
+		</section>
+
 
 
 
