Completed Mobile products section

--- a/index.html
+++ b/index.html
@@ -69,8 +69,13 @@
 			<a href="#">Calculators</a>
 
 			<div class="percentage">
-				<span class="limited">Limited Time</span>
-				<span>Home loan</span>
+				<span class="limited">Limited Time</span><span>Home loan</span>
+				<p>13.5<span>%</span><span>p.a.</p>
+				<ul>
+					<li>$2,000+</li>
+					<li>90 days notice</li>
+					<li>Cool wristband</li>
+				</ul>
 			</div>
 
 			<a href="#">See all interest rates &gt;</a>
