Completed Products section

--- a/index.html
+++ b/index.html
@@ -58,19 +58,21 @@
 
 
 		<section id="products">
-			<h1>New 'round here?</h1>
-			<p>Our name says it all. We're a bank made for New Zealanders, by New Zealanders. Helping Kiwis achieve financial independence is what we do.</p>
+			<div>
+				<h1>New 'round here?</h1>
+				<p>Our name says it all. We're a bank made for New Zealanders, by New Zealanders. Helping Kiwis achieve financial independence is what we do.</p>
 
-			<a href="#">Everyday banking</a>
-			<a href="#">Credit cards</a>
-			<a href="#">Home loans</a>
-			<a href="#">KiwiSaver</a>
-			<a href="#">Rates &amp; fees</a>
-			<a href="#">Calculators</a>
-
+				<a href="#">Everyday banking</a>
+				<a href="#">Credit cards</a>
+				<a href="#">Home loans</a>
+				<a href="#">KiwiSaver</a>
+				<a href="#">Rates &amp; fees</a>
+				<a href="#">Calculators</a>
+			</div>
+				
 			<div class="percentage">
 				<span class="limited">Limited Time</span><span>Home loan</span>
-				<p>13.5<span>%</span><span>p.a.</p>
+				<p>13.5<span>%</span><span>p.a.</span></p>
 				<ul>
 					<li>$2,000+</li>
 					<li>90 days notice</li>
