Added Mobile promos

--- a/index.html
+++ b/index.html
@@ -84,6 +84,44 @@
 			
 		</section>
 
+		<section id="promos">
+			<div class="promo-bits">
+				<h1>Get one and go!</h1>
+				<p>Get up to 100 Airpoints Dollars™ when you get a new Air New Zealand Airpoints MasterCard®. Bonus Airpoints Dollars will be paid into the account of the primary cardholder on 23 May 2016. Offer ends 30 April 2016. <span>use promo code ac006</span>.</p>
+
+				<a href="#">Apply online now &gt;</a>
+			</div>
+
+			<div class="promo-bits">
+				<h1>Our Term Deposits have won again</h1>
+				<p>We’ve won the <a href="#"><span>canstar</span></a> best value Term Deposit award for the third year running.</p>
+
+				<a href="#">Find out more &gt;</a>
+			</div>
+
+			<div class="promo-bits">
+				<h1>Changes to fees and limits</h1>
+				<p>We're making changes to our fees and limits for Personal Banking and Business Banking customers from 1 April 2016.</p>
+
+				<a href="#">Find out more &gt;</a>
+			</div>
+
+			<div class="promo-bits">
+				<h1>Help Me Save!</h1>
+				<p>How much could you save if you skipped that second coffee? Choose your weakness and see how your little indulgences add up over a year.</p>
+
+				<a href="#">Tell me more &gt;</a>
+			</div>
+
+		</section>	
+
+
+
+
+
+				
+		</section>
+
 
 
 
