Added Promo and TC and Endorsement

--- a/index.html
+++ b/index.html
@@ -85,28 +85,32 @@
 		</section>
 
 		<section id="promos">
-			<div class="promo-bits">
+			<div class="promos-bits">
+				<img src="http:/placehold.it/100x100" alt="pictures">
 				<h1>Get one and go!</h1>
 				<p>Get up to 100 Airpoints Dollars™ when you get a new Air New Zealand Airpoints MasterCard®. Bonus Airpoints Dollars will be paid into the account of the primary cardholder on 23 May 2016. Offer ends 30 April 2016. <span>use promo code ac006</span>.</p>
 
 				<a href="#">Apply online now &gt;</a>
 			</div>
 
-			<div class="promo-bits">
+			<div class="promos-bits">
+				<img src="http:/placehold.it/100x100" alt="pictures">
 				<h1>Our Term Deposits have won again</h1>
 				<p>We’ve won the <a href="#"><span>canstar</span></a> best value Term Deposit award for the third year running.</p>
 
 				<a href="#">Find out more &gt;</a>
 			</div>
 
-			<div class="promo-bits">
+			<div class="promos-bits">
+				<img src="http:/placehold.it/100x100" alt="pictures">
 				<h1>Changes to fees and limits</h1>
 				<p>We're making changes to our fees and limits for Personal Banking and Business Banking customers from 1 April 2016.</p>
 
 				<a href="#">Find out more &gt;</a>
 			</div>
 
-			<div class="promo-bits">
+			<div class="promos-bits">
+				<img src="http:/placehold.it/100x100" alt="pictures">
 				<h1>Help Me Save!</h1>
 				<p>How much could you save if you skipped that second coffee? Choose your weakness and see how your little indulgences add up over a year.</p>
 
@@ -115,13 +119,37 @@
 
 		</section>	
 
+		<section id="testimonials">
+			
+			<h1>What people are saying about us</h1>
+			
+			<div class="endorsement">			
+				<div id="endorsement-1">
+					<p>@KiwibankNZ the app is so awesome! It even has a picture of the picture on my card! #clever.</p>
+					<span>Charlie Brown @woodstock.com</span>	 
+				</div>
+			</div>	
+
+			<div class="endorsement">
+				<div id="endorsement-2">
+					<p>@KiwibankNZ the app is so awesome! It even has a picture of the picture on my card! #clever.</p>
+					<span>Dirty Harry @magnum.com</span>
+				</div>
+			</div>
+
+			<a href="#"></a><p>T Follow us on Twitter. F Follow us on Facebook</p>	
+				
+		</section>
+		
+		<div class="alert">
+			<p>The Kiwibank General Terms &amp; Conditions have changed.<a href="#"> Find out more.</a></p>
+		</div>
 
 
 
 
 				
-		</section>
-
+	
 
 
 
